chore: add operationIds to api spec
